--- a/web/components/CategoryCoverageChart/CategoryCoverageChart.module.scss
+++ b/web/components/CategoryCoverageChart/CategoryCoverageChart.module.scss
@@ -3,16 +3,24 @@
 
 .container {
   height: 100%;
+  width: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
 
   .chartHeader {
     text-align: center;
     margin-bottom: 0;
+    font-family: "Roboto Condensed";
+    width: 100%;
   }
 
   .content {
-    height: 100%;
+    height: 95%;
+    width: 95%;
+    position: relative; // Add this
+    overflow: hidden; // Optional: clips anything slightly overflowing
   }
   .title {
     white-space: nowrap;
