--- a/web/styles/wigoCharts.module.scss
+++ b/web/styles/wigoCharts.module.scss
@@ -1,3 +1,6 @@
+@use "sass:color";
+@use "styles/vars" as v;
+@use "sass:math";
 @import url("https://fonts.googleapis.com/css2?family=Train+One&family=Zen+Tokyo+Zoo&display=swap");
 
 /* 
@@ -10,23 +13,25 @@
     - Now modifies the .playerHeadshot to have a flexbox with left and right sides,
       plus the TeamNameSVG absolutely positioned behind them.
 */
+
 .wigoChartBorder {
   /* This parent container is bigger than its child by padding on all sides */
-  background-color: #404040;
-  width: 98%; /* or whatever overall width you desire */
-  height: 90vh; /* or whatever overall height you desire */
+  @include v.component-wrapper;
+
+  // background-color: #404040;
+  width: 95%;
+  height: 85vh;
   margin: 20px auto 20px auto; /* 25px margin at the top, centers the parent in the browser */
-  padding: 1%; /* 5% total: 2.5% on left + 2.5% on right, etc. */
-  box-sizing: border-box; /* ensures padding does not add to total width/height */
-  border-radius: 16px;
+  // box-sizing: border-box; /* ensures padding does not add to total width/height */
+  // border-radius: 16px;
 }
 
 .wigoChart {
   /* Child takes the full remaining space inside .wigoChartBorder */
   width: 100%;
   height: 100%;
-  background-color: #202020;
-  border: 2px solid #606060;
+  background-color: v.$background-medium;
+  border: 2px solid v.$background-dark;
   border-radius: 8px;
 
   display: grid;
@@ -45,7 +50,7 @@
 
 .nameSearchBar {
   grid-area: 1 / 1 / 3 / 10;
-  background-color: #303030;
+  background-color: v.$background-dark;
   border-bottom: #404040 3px solid;
   border-radius: 8px 8px 0 0;
   display: flex;
@@ -73,6 +78,21 @@
   overflow: hidden; /* The entire .playerHeadshot is our bounding box */
   background-color: var(--secondary-color);
   border: 1px solid #07aae2;
+
+  .teamLogo span {
+    overflow: visible !important;
+  }
+
+  .teamLogo img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    -webkit-filter: drop-shadow(2px 2px 0 white) drop-shadow(-2px 2px 0 white)
+      drop-shadow(2px -2px 0 white) drop-shadow(-2px -2px 0 white);
+
+    filter: drop-shadow(2px 2px 0 white) drop-shadow(-2px 2px 0 white)
+      drop-shadow(2px -2px 0 white) drop-shadow(-2px -2px 0 white);
+  }
 
   /* TEAM NAME SVG behind everything */
   .teamNameSVG {
@@ -169,7 +189,7 @@
 }
 
 .perGameStats {
-  grid-area: 15 / 10 / 27 / 16;
+  grid-area: 12 / 7 / 24 / 10; // Rows 12-23, Columns 7-9 (3 columns wide - 1 part)
   border: 1px solid #07aae2;
 }
 
@@ -348,7 +368,7 @@
 }
 
 .percentileChart {
-  grid-area: 12 / 1 / 24 / 10;
+  grid-area: 12 / 1 / 24 / 7;
   border: 1px solid #07aae2;
 }
 
